syntax = "proto3";

import "google/protobuf/timestamp.proto";

package stockpb;

option go_package = "protos/stockpb";

service StockPublisher {
  rpc StartMarket (StartMarketRequest) returns (stream Stock);
}

message StartMarketRequest {
  repeated string stocks = 1;
  google.protobuf.Timestamp start_date = 2;
}

message Stock {
  string id = 1;

  // Use protobuf Timestamp for Go's time.Time
  google.protobuf.Timestamp time_stamp = 2;

  double last = 3;
  int32 volume = 4;
  int32 total_volume = 5;

  double volatility = 6;
}
